--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Navbar</title>
-
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/script.js"></script>
 
-
 <body>
-    <div class="container">
-        <div class="Sticky-bar">
-            <p>this is sticky bar</p>
-        </div>
-        <div class="logo">
-            <img src="./assets/img/Logo__1_-removebg-preview.png" alt="">
-        </div>
-        <div class="menu-icon" onclick="toggleNavbar()">
-            <div></div>
-            <div></div>
-            <div></div>
+    <div class="sticky-bar">
+        <p>This is sticky bar</p>
+    </div>
 
-        </div>
+    <div class="logo">
+        <img src="./assets/img/ecolog.PNG" alt="">
+    </div>
 
+    <div class="menu-icon" onclick="toggleNavbar()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
-
-        <div class="navbar">
+    <div class="navbar">
+        <div class="nav">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
@@ -36,9 +33,4 @@
             <a href="#">Certification</a>
             <a href="#">Contact Us</a>
         </div>
-
     </div>
-
-</body>
-
-</html>
