--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="navbar">
         <div class="nav">
             <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="#">About Us</a>
             <a href="#">Services</a>
             <a href="#">Programs</a>
             <a href="#">Training</a>
