--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Animated Navbar</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/script.js"></script>
+</head>
 
 <body>
     <div class="sticky-bar">
@@ -34,3 +35,6 @@
             <a href="#">Contact Us</a>
         </div>
     </div>
+</body>
+
+</html>
