I have added about, service, contact, program etc

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,8 +37,12 @@
             <a href="/pages/contact.html">Contact Us</a>
         </div>
     </div>
-    
 
+    <div class="container">
+        <section class="about">
+            <p>about us</p>
+        </section>
+    </div>
     
 </body>
 
