--- a/pages/program.html
+++ b/pages/program.html
@@ -29,7 +29,7 @@
     <div class="navbar">
         <div class="nav">
             <a href="/index.html">Home</a>
-            <a href="/pages/about.html">About Us</a>
+            <a href="./pages/about.html">About Us</a>
             <a href="/pages/services.html">Services</a>
             <a href="/pages/program.html">Programs</a>
             <a href="/pages/training.html">Training</a>
@@ -37,7 +37,6 @@
             <a href="/pages/contact.html">Contact Us</a>
         </div>
     </div>
-    
 
     
 </body>
