--- a/pages/certification.html
+++ b/pages/certification.html
@@ -37,6 +37,12 @@
             <a href="/pages/contact.html">Contact Us</a>
         </div>
     </div>
+    <div class="container">
+        <section class="Certification">
+            <p>certification</p>
+        </section>
+    </div>
+    
 
     
 </body>
