I added content in about pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,49 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECO ENVIRON FOUNDATION</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/script.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="sticky-bar">
-        <p>This is sticky bar</p>
+      <p>This is sticky bar</p>
     </div>
 
     <div class="logo">
-        <a href="/index.html">
-            <img src="/assets/img/ecolog.PNG" alt="">
-        </a>
+      <a href="/index.html">
+        <img src="/assets/img/ecolog.PNG" alt="" />
+      </a>
     </div>
 
     <div class="menu-icon" onclick="toggleNavbar()">
-        <div></div>
-        <div></div>
-        <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
 
     <div class="navbar">
-        <div class="nav">
-            <a href="/index.html">Home</a>
-            <a href="/pages/about.html">About Us</a>
-            <a href="/pages/services.html">Services</a>
-            <a href="/pages/program.html">Programs</a>
-            <a href="/pages/training.html">Training</a>
-            <a href="/pages/certification.html">Certification</a>
-            <a href="/pages/contact.html">Contact Us</a>
-        </div>
+      <div class="nav">
+        <a href="/index.html">Home</a>
+        <a href="/pages/about.html">About Us</a>
+        <a href="/pages/services.html">Services</a>
+        <a href="/pages/program.html">Programs</a>
+        <a href="/pages/training.html">Training</a>
+        <a href="/pages/certification.html">Certification</a>
+        <a href="/pages/contact.html">Contact Us</a>
+      </div>
     </div>
 
     <div class="container">
-        <section class="about">
-            <p>about us</p>
-        </section>
+      <section class="heading about">
+        <p>about</p>
+      </section>
+      <div class="contents">
+        <h3>Welcome to <span>ECO ENVIFRON FOUNDATION</span></h3>
+        <p>
+          Eco Environ Foundation was established in the year 2022 and it is
+          registered under Section 8 of the Companies Act 2013, Registration Act
+          of Government of Tamil Nadu and Foreign Contribution Regulation Act of
+          Government of India. The EEF was promoted by its Founder Dr ULAGAMANI
+          EDADI.
+        </p>
+        <h3><span>EEF</span> Objectives</h3>
+        <ul>
+          <li>To provide clean energy services in areas hitherto un-reached.</li>
+          <li>To empower the rural women through the promotion of Self Help Group</li>
+          <li>To bring social change through economic change.</li>
+          <li>To generate awareness and promote adoption of energy efficient and renewable energy
+            technologies.
+            </li>
+          <li>To develop sustainable markets for renewable energy technologies.</li>
+          <li>To facilitate commercial utilization of renewable energy technologies for domestic,
+            agricultural and industrial sectors.
+            </li>
+          <li>To develop areas of cooperation & understanding among various voluntary agencies,
+            organization, associations, institutions, groups and individuals who are involved in rural
+            development activities.</li>
+          <li>To educate the member organizations to develop alternate low-cost methods of integrated
+            rural development and energy options and to integrate further such activities and plans for
+            unified joint actions and programs.</li>
+          <li>To undertake activities to promote innovations & research related to rural development.</li>
+           
+        </ul>
+      </div>
     </div>
-    
-</body>
-
+  </body>
 </html>
