--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
         <p>about</p>
       </section>
       <div class="contents">
-        <h3>Welcome to <span>ECO ENVIFRON FOUNDATION</span></h3>
+        <h3>Welcome to <span>ECO ENVIRON FOUNDATION</span></h3>
         <p>
           Eco Environ Foundation was established in the year 2022 and it is
           registered under Section 8 of the Companies Act 2013, Registration Act
@@ -52,25 +52,146 @@
         </p>
         <h3><span>EEF</span> Objectives</h3>
         <ul>
-          <li>To provide clean energy services in areas hitherto un-reached.</li>
-          <li>To empower the rural women through the promotion of Self Help Group</li>
+          <li>
+            To provide clean energy services in areas hitherto un-reached.
+          </li>
+          <li>
+            To empower the rural women through the promotion of Self Help Group
+          </li>
           <li>To bring social change through economic change.</li>
-          <li>To generate awareness and promote adoption of energy efficient and renewable energy
-            technologies.
-            </li>
-          <li>To develop sustainable markets for renewable energy technologies.</li>
-          <li>To facilitate commercial utilization of renewable energy technologies for domestic,
-            agricultural and industrial sectors.
-            </li>
-          <li>To develop areas of cooperation & understanding among various voluntary agencies,
-            organization, associations, institutions, groups and individuals who are involved in rural
-            development activities.</li>
-          <li>To educate the member organizations to develop alternate low-cost methods of integrated
-            rural development and energy options and to integrate further such activities and plans for
-            unified joint actions and programs.</li>
-          <li>To undertake activities to promote innovations & research related to rural development.</li>
-           
+          <li>
+            To generate awareness and promote adoption of energy efficient and
+            renewable energy technologies.
+          </li>
+          <li>
+            To develop sustainable markets for renewable energy technologies.
+          </li>
+          <li>
+            To facilitate commercial utilization of renewable energy
+            technologies for domestic, agricultural and industrial sectors.
+          </li>
+          <li>
+            To develop areas of cooperation & understanding among various
+            voluntary agencies, organization, associations, institutions, groups
+            and individuals who are involved in rural development activities.
+          </li>
+          <li>
+            To educate the member organizations to develop alternate low-cost
+            methods of integrated rural development and energy options and to
+            integrate further such activities and plans for unified joint
+            actions and programs.
+          </li>
+          <li>
+            To undertake activities to promote innovations & research related to
+            rural development.
+          </li>
         </ul>
+        <p>
+          <b
+            >The objects for which the Institution is established shall be as
+            follows:</b
+          >
+        </p>
+        <ul>
+          <li>
+            To improve the economic, moral and social standard of villages/urban
+            area/indigenous people in area of operation of the institution.
+          </li>
+          <li>
+            To alleviate poverty and bring about better living conditions,
+            mutual cooperation, rural development and unity among the
+            villages/urban population/indigenous people
+          </li>
+          <li>
+            To plan and prepare an action programmes through a feasibility
+            report based on the reconnaissance survey involving human resources,
+            inflow, outflow of energy forms in on-form and off-farm activities
+            with respect to socio-economic condition of the indigenous people
+            village as a system.
+          </li>
+          <li>
+            To educate rural population on the importance of Renewable energy
+            sources and creates awareness amongst them on the necessity of
+            adopting Green energy gadgets.
+          </li>
+          <li>
+            To promote ecological awareness by organizing seminars, symposium,
+            presentations, plays, producing audio-visual programmes and lectures
+            by eminent scholars
+          </li>
+          <li>
+            To undertake, promote and sponsor all activities for protecting and
+            furthering the interest of disadvantaged people and for the
+            promotion and protection of public health, safety, medicine,
+            agriculture livestock and environment.
+          </li>
+          <li>
+            To check and control rural-urban-tribal exodus, which causes
+            ecological imbalance, by creation of gainful employment
+            opportunities and provision for meeting the basic water facilities,
+            living standards, communications, entertainment, medical and
+            educational facilities in rural areas
+          </li>
+          <li>
+            To develop and promote eco-friendly technology models and farming
+            practices recycling and reuse of waste and conservation of resources
+            for meeting the basic needs of the present indigenous people and
+            future generations
+          </li>
+          <li>
+            To avert and check further degradation of life support systems like
+            land, water and air.
+          </li>
+          <li>
+            To initiate, conduct, carry on sponsor, support research training,
+            extension in agriculture, fisheries, animal husbandry, rural
+            technology, extension education social sciences and eco-friendly
+            technologies.
+          </li>
+          <li>
+            o initiate, conduct, carry on sponsor and support research training
+            and extension in ecofriendly bio-energy fuel conservation systems,
+            preservation and up gradation of genetic potentiality of indigenous
+            plant and animal resources.
+          </li>
+          <li>
+            To create infrastructure base in rural sector with special emphasis
+            to improve the standard of living of child labourer, bonded
+            labourers, destitute women and handicaps tribal folk, aged senior
+            citizens and beggars
+          </li>
+          <li>
+            To organize specialized library and information exchange services
+            and to conduct nonformal education programmes.
+          </li>
+          <li>
+            To amalgamate with any one or more of the societies, public chart
+            table trusts non-profit organizations having similar objects as that
+            of EEF on such terms and conditions as may be in the best interest
+            of the indigenous population.
+          </li>
+          <li>
+            To collaborate and to cooperate with national, international
+            institutions and organizations for achieving the objects of EEF and
+            the needs and rights of indigenous population.
+          </li>
+          <li>
+            To pursue all the above activities for furthering and protecting the
+            disadvantaged population.
+          </li>
+        </ul>
+        <span>Mission</span>
+        <ul>
+          <li>To empower rural communities through sustainable green energy solutions and 
+          holistic rural development programs. We are dedicated to fostering self-reliance, 
+          environmental stewardship, and economic growth in rural areas by providing access 
+          to clean and renewable energy sources while enhancing overall quality of life."</li>
+        </ul>
+        <span>Vision:</span>
+        <p>To create a world where all people have access to affordable, reliable, and renewable 
+          energy, enabling them to lift themselves out of poverty, improve their quality of life, and 
+          combat the negative impacts of climate change.
+          </p>
       </div>
     </div>
   </body>
