--- a/pages/program.html
+++ b/pages/program.html
@@ -43,12 +43,24 @@
             <p>Program</p>
         </section>
         <div class="contents">
-            <p>
-              to educate rural population on the importance of non-conventional
-              energey sources and creates awareness amongest them on the nesessity
-              of adopting non-conventional energey gadgests and to provide clean
-              energy services in un-reachable remote areas.
-            </p>
+         <span>EEF PROGRAMMES :</span>
+         <ol>
+            <li>POWER GENERATION DURING WASTE WATER TREATMENT</li>
+            <li> SALIENT FEATURE OF THE HIGH RATE BIO-METHANATION REACTOR</li>
+            <li>Tribal Electrification with Biogas</li>
+            <li>Biogas Programme</li>
+            <li>Solar lantern program</li>
+            <li> Improved smokeless Chulha Program</li>
+            <li>EMPOWERMENT OF WOMEN</li>
+            <li> Waste Management Program
+            </li>
+            <li>Watershed Development Programme
+            </li>
+            <li>Vermi-Composting
+            </li>
+            <li> HYDRO POWER PROJECT - HYDRO ELECTRIFICATION</li>
+            
+         </ol>
             
           </div>
     </div>
