--- a/pages/training.html
+++ b/pages/training.html
@@ -43,12 +43,26 @@
             <p>Traning</p>
         </section>
         <div class="contents">
-            <p>
-              to educate rural population on the importance of non-conventional
-              energey sources and creates awareness amongest them on the nesessity
-              of adopting non-conventional energey gadgests and to provide clean
-              energy services in un-reachable remote areas.
-            </p>
+         <span>EEF TRAINING TOWARS GREEN ENERGY</span>
+         <p><b>National Level Training</b></p>
+         <span>Free Surya mitra Training
+        </span>
+        <p>Eligibility - ITI / Diploma (Mech, EEE, ECE)
+            International Level Training</p>
+            <span>Biogas Technology </span>
+            <p>(Eligibility - Any Degree)</p>
+             <span>Free Surya mitra Training
+        </span>
+        <p>Eligibility - ITI / Diploma (Mech, EEE, ECE)
+            International Level Training</p>
+            <span>Biogas Technology </span>
+            <p>(Eligibility - Any Degree)</p>
+            <span>Solar Energy</span>
+            <p>(Eligibility - Any Degree)</p>
+            <span>Hydro Energy </span>
+            <p>(Eligibility - Any Degree)</p>
+
+
             
           </div>
     </div>
