--- a/pages/certification.html
+++ b/pages/certification.html
@@ -43,12 +43,12 @@
             <p>certification</p>
         </section>
         <div class="contents">
-            <p>
-              to educate rural population on the importance of non-conventional
-              energey sources and creates awareness amongest them on the nesessity
-              of adopting non-conventional energey gadgests and to provide clean
-              energy services in un-reachable remote areas.
-            </p>
+            <ol>
+                <li>Approved by IREDA</li>
+                <li>Approved by Ministry of New Renewable Energy (MNRE)</li>
+                <li>Approved by TEDA</li>
+                <li> Directorate of Rural Development, Government of Tamil Nadu</li>
+            </ol>
             
           </div>
     </div>
