--- a/index.html
+++ b/index.html
@@ -1,40 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECO ENVIRON FOUNDATION</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/script.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="sticky-bar">
-        <p>This is sticky bar</p>
+      <p>This is sticky bar</p>
     </div>
     <div class="logo">
-        <a href="/index.html">
-            <img src="/assets/img/ecolog.PNG" alt="">
-        </a>
+      <a href="/index.html">
+        <img src="/assets/img/ecolog.PNG" alt="" />
+      </a>
     </div>
     <div class="menu-icon" onclick="toggleNavbar()">
-        <div></div>
-        <div></div>
-        <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
     <div class="navbar">
-        <div class="nav">
-            <a href="/index.html">Home</a>
-            <a href="/pages/about.html">About Us</a>
-            <a href="/pages/services.html">Services</a>
-            <a href="/pages/program.html">Programs</a>
-            <a href="/pages/training.html">Training</a>
-            <a href="/pages/certification.html">Certification</a>
-            <a href="/pages/contact.html">Contact Us</a>
-        </div>
+      <div class="nav">
+        <a href="/index.html">Home</a>
+        <a href="/pages/about.html">About Us</a>
+        <a href="/pages/services.html">Services</a>
+        <a href="/pages/program.html">Programs</a>
+        <a href="/pages/training.html">Training</a>
+        <a href="/pages/certification.html">Certification</a>
+        <a href="/pages/contact.html">Contact Us</a>
+      </div>
     </div>
 
-</body>
+    <footer>
+      <div class="top-bar">
+        <div class="left">
+          <div class="f-logo">
+            <img src="./assets/img/ecolog.PNG" alt="" />
+          </div>
+          <div class="footer-link">
+            <ul>
+              <a href=""> <li>Home</li> </a>
+              <a href=""> <li>About</li> </a>
+              <a href=""><li>Services</li> </a>
+            </ul>
+            <ul>
+              <a href=""> <li>Program</li> </a>
+              <a href=""> <li>Training</li> </a>
+              <a href=""><li>Sites Map</li> </a>
+            </ul>
+          </div>
+          <div class="social-icon">
+            <a href=""><img src="./assets/img/social-icon/fb.jpeg" alt="" /></a>
+            <a href=""
+              ><img src="./assets/img/social-icon/insta.jpeg" alt=""
+            /></a>
+            <a href=""
+              ><img src="./assets/img/social-icon/linkedin.jpeg" alt=""
+            /></a>
+            <a href=""
+              ><img src="./assets/img/social-icon/mail.jpeg" alt=""
+            /></a>
+            <a href=""
+              ><img src="./assets/img/social-icon/twitter.jpeg" alt=""
+            /></a>
+            <a href=""
+              ><img src="assets/img/social-icon/youtube.jpeg" alt=""
+            /></a>
+          </div>
+        </div>
+        <div class="right">
+          <h4>Contact Us</h4>
+        </div>
+      </div>
 
+      
+      <div class="buttom-bar">
+        <hr />
+        <span>Term of Use | Privacy Policy</span>
+        <p>&copy; 2023 Eco Environ Foundation.All right Reserved .</p>
+        <hr />
+        <p class="copyright">Developed With <span>❤</span> by FAVIT in India</p>
+      </div>
+    </footer>
+
+
+  </body> 
 </html>
