--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a href="/pages/program.html">Programs</a>
         <a href="/pages/training.html">Training</a>
         <a href="/pages/certification.html">Certification</a>
+        <a href="/pages/Gallery.html">Gallery</a>
+        <a href="/pages/Membership.html">Membership</a>
         <a href="/pages/contact.html">Contact Us</a>
       </div>
     </div>
@@ -49,24 +51,24 @@
             <ul>
               <a href=""> <li>Program</li> </a>
               <a href=""> <li>Training</li> </a>
-              <a href=""><li>Sites Map</li> </a>
+              <a href=""><li>Site Map</li> </a>
             </ul>
           </div>
           <div class="social-icon">
-            <a href=""><img src="./assets/img/social-icon/fb.jpeg" alt="" /></a>
-            <a href=""
+            <a href="https://www.facebook.com"><img src="./assets/img/social-icon/fb.jpeg" alt="" /></a>
+            <a href="https://www.instagram.com"
               ><img src="./assets/img/social-icon/insta.jpeg" alt=""
             /></a>
-            <a href=""
+            <a href="https://www.linkedin.com"
               ><img src="./assets/img/social-icon/linkedin.jpeg" alt=""
             /></a>
-            <a href=""
+            <a href="https://www.threads.com"
               ><img src="./assets/img/social-icon/mail.jpeg" alt=""
             /></a>
-            <a href=""
+            <a href="https://www.twitter.com"
               ><img src="./assets/img/social-icon/twitter.jpeg" alt=""
             /></a>
-            <a href=""
+            <a href="https://www.youtube.com"
               ><img src="assets/img/social-icon/youtube.jpeg" alt=""
             /></a>
           </div>
@@ -79,10 +81,11 @@
       
       <div class="buttom-bar">
         <hr />
-        <span>Term of Use | Privacy Policy</span>
+        <span><a href="pages/terms.html" target="_blank">Term of Use</a> |<a href="pages/privacy.html" target="_blank">
+           Privacy Policy</a></span>
         <p>&copy; 2023 Eco Environ Foundation.All right Reserved .</p>
         <hr />
-        <p class="copyright">Developed With <span>❤</span> by FAVIT in India</p>
+        <p class="copyright">Developed With <span>❤</span> by <img src="/assets/img/ficon.PNG" alt="" class="src"> in India</p>
       </div>
     </footer>
 
