--- a/pages/about.html
+++ b/pages/about.html
@@ -33,6 +33,8 @@
         <a href="/pages/program.html">Programs</a>
         <a href="/pages/training.html">Training</a>
         <a href="/pages/certification.html">Certification</a>
+        <a href="/pages/Gallery.html">Gallery</a>
+        <a href="/pages/Membership.html">Membership</a>
         <a href="/pages/contact.html">Contact Us</a>
       </div>
     </div>
@@ -212,7 +214,7 @@
             <ul>
               <a href=""> <li>Program</li> </a>
               <a href=""> <li>Training</li> </a>
-              <a href=""><li>Sites Map</li> </a>
+              <a href=""><li>Site Map</li> </a>
             </ul>
           </div>
           <div class="social-icon">
