--- a/pages/program.html
+++ b/pages/program.html
@@ -33,6 +33,8 @@
         <a href="/pages/program.html">Programs</a>
         <a href="/pages/training.html">Training</a>
         <a href="/pages/certification.html">Certification</a>
+        <a href="/pages/Gallery.html">Gallery</a>
+        <a href="/pages/Membership.html">Membership</a>
         <a href="/pages/contact.html">Contact Us</a>
       </div>
     </div>
