Some design fixed and features add

--- a/index.html
+++ b/index.html
@@ -35,6 +35,64 @@
         <a href="/pages/contact.html">Contact Us</a>
       </div>
     </div>
+    <div class="contents">
+      <p>
+        The Eco Environ Foundation, founded by Dr. ULAGAMANI EDADI in the year
+        2021, is committed to empowering young people with earning opportunities
+        and enhancing access to facilities in remote areas. The organization is
+        dedicated to providing a better future for the underprivileged and the
+        younger generation through various initiatives, including:
+      </p>
+
+      <p>⋆ Funding a college student to set up an ice cream business.</p>
+
+      <p>
+        ⋆ Assisting people in remote villages to access essential facilities in
+        collaboration with the state government.
+      </p>
+      <p>
+        Dr. Ulagumani Edadi, born and raised in Madurai, a city in the state
+        Tamil Nadu, known as the sleepless city and famous for temples , food
+        and especially the Madurai Malli (jasmine flower). After completing his
+        college, he moved to North India to work for Jain irrigations – one of
+        the pioneers in the solar and drip irrigations in India. Then he moved
+        back to south India and worked as the Business head for KCP solar and
+        Ace Renewtech, both being the best solar companies in TamilNadu.
+      </p>
+      <p>
+        Under his professional leadership, he contributed a whopping 5MW of
+        solar ground-mount projects, more than 500 kw of solar rooftop projects
+        and more than 900 solar pumps being installed in the state of Karnataka.
+        All these numbers are merely an indication of the hard work, which he
+        poured for the above company’s development.
+      </p>
+      <p>
+        After serving the industry for five years and gaining a vast experience
+        in the field of renewable energy industry and expertise in Solar,
+        Biogas, and Energy auditing. In the year 2019, he also founded Blue
+        Bright Energy Private Limited, a company offering solar energy solutions
+        services. not for his personal gain, but for a change, he wishes to see
+        in reality, in the Indian subcontinent. The change he wishes to see is
+        the development of India in pioneering the Sustainable development goals
+        and establishing itself as the foremost leader in tackling climate
+        change as well as global warming. He firmly believes that the change
+        always starts from one single individual and he has the content that, he
+        is such an individual.
+      </p>
+      <p>
+        Apart from professional achievements , he is a patriotic person and
+        always wishes for the good things for the people around him. He is an
+        embodiment of “Leadership” and he developed himself by learning from the
+        footsteps of Dr.B.R.Ambedkar. He is an exhilarating personality and
+        always wishes the people around him to be motivated.
+      </p>
+      <p>
+        In short, Dr.Ulagamani embraces the philosophy of sustainability and he
+        believes that he can definitely make a change in this society. He always
+        thinks of contributing to Mother nature and he started his part, in the
+        process of revolutionizing India.
+      </p>
+    </div>
 
     <footer>
       <div class="top-bar">
@@ -44,18 +102,25 @@
           </div>
           <div class="footer-link">
             <ul>
-              <a href=""> <li>Home</li> </a>
-              <a href=""> <li>About</li> </a>
-              <a href=""><li>Services</li> </a>
+              <a href="./index.html"> <li>Home</li> </a>
+              <a href="./pages/about.html"> <li>About</li> </a>
+              <a href="./pages/services.html"><li>Services</li> </a>
             </ul>
             <ul>
-              <a href=""> <li>Program</li> </a>
-              <a href=""> <li>Training</li> </a>
-              <a href=""><li>Site Map</li> </a>
+              <a href="./pages/program.html"> <li>Program</li> </a>
+              <a href="./pages/training.html"> <li>Training</li> </a>
+              <a href="./pages/sitemap.html"><li>Site Map</li> </a>
+            </ul>
+            <ul>
+              <a href="./pages/Membership.html"><li>Membership</li> </a>
+              <a href="./pages/certification.html"> <li>Certification</li> </a>
+              <a href="./pages/Gallery.html"> <li>Gallery</li> </a>
             </ul>
           </div>
           <div class="social-icon">
-            <a href="https://www.facebook.com"><img src="./assets/img/social-icon/fb.jpeg" alt="" /></a>
+            <a href="https://www.facebook.com"
+              ><img src="./assets/img/social-icon/fb.jpeg" alt=""
+            /></a>
             <a href="https://www.instagram.com"
               ><img src="./assets/img/social-icon/insta.jpeg" alt=""
             /></a>
@@ -75,20 +140,35 @@
         </div>
         <div class="right">
           <h4>Contact Us</h4>
+          <p>
+            NO:45.Chinnavar illam,<br />
+            Thanathavam,Madakkulam(P.O),<br />
+            ponmeni,Madurai-625 003.<br />
+            Ph: +91 8681003042 <br />
+            eefmdu@gmail.com
+          </p>
         </div>
       </div>
 
-      
       <div class="buttom-bar">
         <hr />
-        <span><a href="pages/terms.html" target="_blank">Term of Use</a> |<a href="pages/privacy.html" target="_blank">
-           Privacy Policy</a></span>
+        <span
+          ><a href="pages/terms.html" target="_blank">Term of Use</a> |<a
+            href="pages/privacy.html"
+            target="_blank"
+          >
+            Privacy Policy</a
+          ></span
+        >
         <p>&copy; 2023 Eco Environ Foundation.All right Reserved .</p>
         <hr />
-        <p class="copyright">Developed With <span>❤</span> by <img src="/assets/img/ficon.PNG" alt="" class="src"> in India</p>
+        <p class="copyright">
+          Developed With <span>❤</span> by
+          <a href="https://www.favit.in/">
+            <img src="/assets/img/ficon.PNG" alt="" class="src" /> 
+          </a> in India
+        </p>
       </div>
     </footer>
-
-
-  </body> 
+  </body>
 </html>
