--- a/pages/program.html
+++ b/pages/program.html
@@ -28,7 +28,7 @@
     <div class="navbar">
       <div class="nav">
         <a href="/index.html">Home</a>
-        <a href="./pages/about.html">About Us</a>
+        <a href="/pages/about.html">About Us</a>
         <a href="/pages/services.html">Services</a>
         <a href="/pages/program.html">Programs</a>
         <a href="/pages/training.html">Training</a>
@@ -68,14 +68,19 @@
           </div>
           <div class="footer-link">
             <ul>
-              <a href=""> <li>Home</li> </a>
-              <a href=""> <li>About</li> </a>
-              <a href=""><li>Services</li> </a>
+              <a href="../index.html"> <li>Home</li> </a>
+              <a href="./about.html"> <li>About</li> </a>
+              <a href="./services.html"><li>Services</li> </a>
             </ul>
             <ul>
-              <a href=""> <li>Program</li> </a>
-              <a href=""> <li>Training</li> </a>
-              <a href=""><li>Sites Map</li> </a>
+              <a href="./program.html"> <li>Program</li> </a>
+              <a href="./training.html"> <li>Training</li> </a>
+              <a href="./sitemap.html"><li>Site Map</li> </a>
+            </ul>
+            <ul>
+              <a href="./Membership.html"><li>Membership</li> </a>
+              <a href="./certification.html"> <li>Certification</li> </a>
+              <a href="./Gallery.html"> <li>Gallery</li> </a>
             </ul>
           </div>
           <div class="social-icon">
@@ -99,16 +104,35 @@
         </div>
         <div class="right">
           <h4>Contact Us</h4>
+          <p>
+            NO:45.Chinnavar illam,<br />
+             Thanathavam,Madakkulam(P.O),<br />
+             ponmeni,Madurai-625 003.<br />
+             Ph: +91 8681003042 <br/>
+             eefmdu@gmail.com
+           </p>
         </div>
       </div>
 
       
       <div class="buttom-bar">
         <hr />
-        <span>Term of Use | Privacy Policy</span>
+        <span
+          ><a href="./terms.html" target="_blank">Term of Use</a> |<a
+            href="./privacy.html"
+            target="_blank"
+          >
+            Privacy Policy</a
+          ></span
+        >
         <p>&copy; 2023 Eco Environ Foundation.All right Reserved .</p>
         <hr />
-        <p class="copyright">Developed With <span>❤</span> by FAVIT in India</p>
+        <p class="copyright">
+          Developed With <span>❤</span> by
+          <a href="https://www.favit.in/">
+            <img src="/assets/img/ficon.PNG" alt="" class="src" /> 
+          </a> in India
+        </p>
       </div>
     </footer>
   </body>
