--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -42,7 +42,7 @@
     
     
     <div class="container">
-      <section class="heading about">
+      <section class="heading">
         <p>Gallery</p>
       </section>
       <!-- <div class="gallery">
