--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="container">
-      <section class="heading about">
+      <section class="heading">
         <p>Sitemap</p>
       </section>
       
