--- a/pages/Membership.html
+++ b/pages/Membership.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="container">
-      <section class="heading about">
+      <section class="heading">
         <p>Membership</p>
       </section>
       <div class="membership-form">
