--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="container">
-      <section class="heading about">
+      <section class="heading">
         <p>about us</p>
       </section>
       <div class="contents">
