gallery design fix

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -45,7 +45,8 @@
       <section class="heading">
         <p>Gallery</p>
       </section>
-      <!-- <div class="gallery">
+      
+      <div class="photo-container">
         <img src="https://randomuser.me/api/portraits/women/56.jpg" alt="Photo 1">
         <img src="https://randomuser.me/api/portraits/women/57.jpg" alt="Photo 2">
         <img src="https://randomuser.me/api/portraits/women/58.jpg" alt="Photo 3">
@@ -64,7 +65,9 @@
         <img src="https://randomuser.me/api/portraits/women/71.jpg" alt="Photo 4">
         <img src="https://randomuser.me/api/portraits/women/72.jpg" alt="Photo 5">
         <img src="https://randomuser.me/api/portraits/women/73.jpg" alt="Photo 6">
-    </div> -->
+    </div>
+      
+
     </div>
 
     <footer>
